--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vladilenm/excel-course.git"
+  },
   "keywords": [
     "js",
     "javascript",
     "excel"
   ],
-  "author": "",
+  "author": "Vladilen Minin <vladilen.minin@gmail.com>",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vladilenm/excel-course/issues"
+  },
+  "homepage": "https://github.com/vladilenm/excel-course#readme",
   "private": true,
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
