--- a/package.json
+++ b/package.json
@@ -8,17 +8,26 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vladilenm/excel-course.git"
+  },
   "keywords": [
     "js",
     "javascript",
     "excel"
   ],
-  "author": "",
+  "author": "Vladilen Minin <vladilen.minin@gmail.com>",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vladilenm/excel-course/issues"
+  },
+  "homepage": "https://github.com/vladilenm/excel-course#readme",
   "private": true,
   "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
